--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width"/>
         <title>Paul Brandenburger</title>
-        <link rel="stylesheet" type="text/css" href="/css/port.css">
+        <link rel="stylesheet" type="text/css" href="../css/port.css">
     </head>
 
     <!--BODY-->
