--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row" id="about">
             <!--LEFT COLUMN-->
             <div class="column_2">
-				<img src="images/london.jpg" alt="pic to be added later">
+				<img src="/images/london.jpg" alt="pic to be added later">
 			</div>
 			<!--RIGHT COLUMN-->
 			<div class="column_1">
