--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <!--NAVBAR-->
         <div class="navbar">
             <a class="active" href="#home">Home</a>
+			<a href="#slideshow">Slideshow</a>
             <a href="#about">About</a>
             <a href="#github">Github</a>
-            <a href="#contact">Contact</a>
+            <a onclick="openForm()" ondblclick="closeForm()" class="Contact">Contact</a>
         </div>
 
         <!--Breaks used to add space between nav and heading-->
@@ -45,6 +46,52 @@
                 </p>
             </strong>
         </div>
+		
+		<!---slideshow--->
+		<div id="slideshow">
+			<div id="Slideshow_Background">
+				<div id="Slideshow_Container">
+					<!-- slide 1 0f 5-->
+					<div class="mySlides">
+						<img class="Slideshow_Images" src="images/purple.jpg" alt="Add a picture here!">
+						<div class="text">I'm available to assist you on your project!</div>
+					</div>
+					<!-- slide 2 0f 5-->
+					<div class="mySlides">
+						<img class="Slideshow_Images" src="images/paperclips.jpg" alt="Add a picture here!">
+						<div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+					</div>
+					<!-- slide 3 0f 5-->
+					<div class="mySlides">
+						<img class="Slideshow_Images" src="images/keyboard.jpg" alt="Add a picture here!">
+						<div class="text">the popular programming language Python,</div>
+					</div>
+					<!-- slide 4 0f 5-->
+					<div class="mySlides">
+						<img class="Slideshow_Images" src="images/map.jpg" alt="Add a picture here!">
+						<div class="text">back end development, databases and SQL.</div>
+					</div>
+					<!-- slide 5 0f 5-->
+					<div class="mySlides">
+						<img class="Slideshow_Images" src="images/usb.jpg" alt="Add a picture here!">
+						<div class="text">Contact me now!</div>
+					</div>
+					<!--prev and next buttons-->
+					<a class="previous" onclick="plusSlides(-1)">&#10094;</a>
+					<a class="next" onclick="plusSlides(1)">&#10095;</a>
+				</div>
+				<br><!--for spacing-->
+				
+				<!--slideshow dots for navigation of the slides-->
+				<div style="text-align: center">
+					<span class="dot" onclick="currentSlide(1)"></span>
+					<span class="dot" onclick="currentSlide(2)"></span>
+					<span class="dot" onclick="currentSlide(3)"></span>
+					<span class="dot" onclick="currentSlide(4)"></span>
+					<span class="dot" onclick="currentSlide(5)"></span>
+				</div>
+			</div>
+		</div>
 
         <!--ABOUT SECTION-->
         <div class="row" id="about">
@@ -59,9 +106,8 @@
                     I am a recent graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s 
                     Software Developer Boot Camp. I am trained and experienced in the following web and programming languages:
                     <br>HTML, CSS, JavaScript, SQL, Python, and more.
-                    <br>
                     <br>I am a full-stack developer and would love to work with you on your project.
-                    <br>Please <a href="#contact">Contact</a> me below!
+                    <br>Please <a onclick="openForm()" class="Contact">Contact</a> me below!
                 </p>
             </div>
         </div>
@@ -74,7 +120,7 @@
                 <p>
                    You can view my coding projects on GitHub:
                    <br>
-                   <p class="center"><a href="fill in URL" target="blank">Paul's GitHub</a></p> 
+                   <p class="center"><a href="https://github.com/Paul07" target="blank">Paul's GitHub</a></p> 
                 </p>
             </div>
             <!--RIGHT COLUMN, FINISH THE LINK TO YOUR PORTFOLIO!-->
@@ -83,27 +129,26 @@
             </div>
         </div>
 
-        <!--CONTACT SECTION-->
-        <div class="row" id="contact">
-            <!--CONTACT IMAGE, LEFT COLUMN. FIND AN IMAGE FOR THIS!-->
-            <div class="column_2 column_tall">
-                <img src="images/purple.jpg" alt="Contact Image">
-            </div>
-            <!--CONTACT FORM, RIGHT COLUMN-->
-            <div class="column_1 column_tall">
-                <h1>Contact</h1>
-                <!--THIS SPECIFIES HOW AND WHERE TO SEND FORM DATA; IT IS BEING LEFT BLANK-->
-                <form action="https://formspree.io/f/xlevqqoa" method="post"><!--FORMSPREE ENDPOINT IN ACTION-->
-                    <label>Name:</label>
-                        <input type="text" placeholder="Please enter your name here">
-                    <label>Email:</label>
-                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
-                    <label>Message:</label>
-                        <input type="text" name="Message" id="Message" placeholder="Please write your message here">
-                        <input type="submit" value="SUBMIT">
-                </form>
-            </div>
-        </div>
+    <!--CONTACT FORM-->
+	<div id="Contact">
+		<button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
+		<div class="form-popup" id="myForm">
+			<form action="https://formspree.io/f/xlevqqoa" method="POST" class="form-container">
+				<h1>Contact</h1>
+				<label for="name"><b>Name</b></label>
+					<input type="text" placeholder="Please enter your name here" name="name" required>
+				<label for="phone"><b>Phone</b></label>
+					<input type="text" placeholder="Please enter your phone number here" name="phone">
+				<label for="email"><b>Email</b></label>
+					<input type="text" placeholder="Please enter your Email address here" name="email" required>
+				<label for="message"><b>Message</b></label>
+					<input type="text" placeholder="Please type any additional information here" name="message">
+					
+				<button type="submit" class="btn">SUBMIT</button>
+				<button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
+			</form>
+		</div>
+	</div>
 
 		<footer>
 			<p>
@@ -111,5 +156,6 @@
 				<br>
 			</p>
 		</footer>
+		<script src="js/portfolio.js"></script>
     </body>
 </html>
