--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!--BACKGROUND VIDEO-->
         <div id="home">
             <video autoplay muted loop id="typing_video">
-                <source src="images/Typing.mp4" type="video/mp4">
+                <source src="Images/Typing.mp4" type="video/mp4">
                 <!--DISPLAY IF VIDEO DOESNT RUN-->
                 Your browser does not support HTML5 video.
             </video>
@@ -53,27 +53,27 @@
 				<div id="Slideshow_Container">
 					<!-- slide 1 0f 5-->
 					<div class="mySlides">
-						<img class="Slideshow_Images" src="images/purple.jpg" alt="Add a picture here!">
+						<img class="Slideshow_Images" src="Images/purple.jpg" alt="Add a picture here!">
 						<div class="text">I'm available to assist you on your project!</div>
 					</div>
 					<!-- slide 2 0f 5-->
 					<div class="mySlides">
-						<img class="Slideshow_Images" src="images/paperclips.jpg" alt="Add a picture here!">
+						<img class="Slideshow_Images" src="Images/paperclips.jpg" alt="Add a picture here!">
 						<div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
 					</div>
 					<!-- slide 3 0f 5-->
 					<div class="mySlides">
-						<img class="Slideshow_Images" src="images/keyboard.jpg" alt="Add a picture here!">
+						<img class="Slideshow_Images" src="Images/keyboard.jpg" alt="Add a picture here!">
 						<div class="text">the popular programming language Python,</div>
 					</div>
 					<!-- slide 4 0f 5-->
 					<div class="mySlides">
-						<img class="Slideshow_Images" src="images/map.jpg" alt="Add a picture here!">
+						<img class="Slideshow_Images" src="Images/map.jpg" alt="Add a picture here!">
 						<div class="text">back end development, databases and SQL.</div>
 					</div>
 					<!-- slide 5 0f 5-->
 					<div class="mySlides">
-						<img class="Slideshow_Images" src="images/usb.jpg" alt="Add a picture here!">
+						<img class="Slideshow_Images" src="Images/usb.jpg" alt="Add a picture here!">
 						<div class="text">Contact me now!</div>
 					</div>
 					<!--prev and next buttons-->
@@ -97,7 +97,7 @@
         <div class="row" id="about">
             <!--LEFT COLUMN-->
             <div class="column_2">
-				<img src="images/london.jpg" alt="pic to be added later">
+				<img src="Images/london.jpg" alt="pic to be added later">
 			</div>
 			<!--RIGHT COLUMN-->
 			<div class="column_1">
@@ -125,7 +125,7 @@
             </div>
             <!--RIGHT COLUMN, FINISH THE LINK TO YOUR PORTFOLIO!-->
             <div class="column_2">
-                <a href="https://github.com" target="blank"><img src="images/GitHub.png" alt="GitHub Logo"></a>
+                <a href="https://github.com/Paul07" target="blank"><img src="Images/GitHub.png" alt="GitHub Logo"></a>
             </div>
         </div>
 
