--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<!-- slide 4 0f 5-->
 					<div class="mySlides">
 						<img class="Slideshow_Images" src="Images/map.jpg" alt="Add a picture here!">
-						<div class="text">back end development, databases and SQL.</div>
+						<div class="text">back end development, and SQL.</div>
 					</div>
 					<!-- slide 5 0f 5-->
 					<div class="mySlides">
@@ -104,7 +104,7 @@
                 <h1>About</h1>
                 <p>
                     I am a recent graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s 
-                    Software Developer Boot Camp. I am trained and experienced in the following web and programming languages:
+                    Software Developer Boot Camp. I am trained in the following web and programming languages:
                     <br>HTML, CSS, JavaScript, SQL, Python, and more.
                     <br>I am a full-stack developer and would love to work with you on your project.
                     <br>Please <a onclick="openForm()" class="Contact">Contact</a> me below!
@@ -119,8 +119,7 @@
                 <h1>GitHub</h1>
                 <p>
                    You can view my coding projects on GitHub:
-                   <br>
-                   <p class="center"><a href="https://github.com/Paul07" target="blank">Paul's GitHub</a></p> 
+                   <br> 
                 </p>
             </div>
             <!--RIGHT COLUMN, FINISH THE LINK TO YOUR PORTFOLIO!-->
