--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@
 	</div>
 
 		<footer>
-			<p>
-				<class="center">Paul Brandenburger
-				<br>
-			</p>
+			<div>
+				<p>
+					<class="center">Paul Brandenburger<br>
+					<a href=https://www.linkedin.com/in/paul-brandenburger/>LinkedIn</a><br>
+					<a href=https://drive.google.com/file/d/1Cylap5bsExnUwu8CeIekLRlFftLXYcX0/view?usp=sharing>Resume</a>
+				</p>
+			</div>
 		</footer>
 		<script src="js/portfolio.js"></script>
     </body>
