--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<p>
 					<class="center">Paul Brandenburger<br>
 					<a href=https://www.linkedin.com/in/paul-brandenburger/>LinkedIn</a><br>
-					<a href=https://drive.google.com/file/d/1Cylap5bsExnUwu8CeIekLRlFftLXYcX0/view?usp=sharing>Resume</a>
+					<a href=https://docs.google.com/document/d/1YASXKt-j4b1phJmgg46QYNlzT2EBo3AwC8UCTPuoeJE/edit?usp=sharing>Resume</a>
 				</p>
 			</div>
 		</footer>
