--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<!-- slide 2 0f 5-->
 					<div class="mySlides">
 						<img class="Slideshow_Images" src="Images/paperclips.jpg" alt="Add a picture here!">
-						<div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+						<div class="text">I am trained in:<br>HTML, CSS, JavaScript,</div>
 					</div>
 					<!-- slide 3 0f 5-->
 					<div class="mySlides">
@@ -104,9 +104,9 @@
                 <h1>About</h1>
                 <p>
                     I am a recent graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s 
-                    Software Developer Boot Camp. I am trained in the following web and programming languages:
+                    Software Developer Boot Camp. I am trained in the following programming languages:
                     <br>HTML, CSS, JavaScript, SQL, Python, and more.
-                    <br>I am a full-stack developer and would love to work with you on your project.
+                    <br>I would love to work with you on your project.
                     <br>Please <a onclick="openForm()" class="Contact">Contact</a> me below!
                 </p>
             </div>
